--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -80,7 +80,7 @@
   position: relative;
   width: 90vw;
   height: 60vh;
-  margin-top: 30vh;
+  margin-top: 5vh;
   display: flex;
   justify-content: space-around;
   margin-left: 5vw;
@@ -88,13 +88,14 @@
   border-radius: 2rem;
 }
 .footer {
-  position: fixed;
-  width: 100vw;
+  position: relative;
+  width: 99vw;
   height: 7vh;
   bottom: 0;
   background-color: rgb(238, 219, 253);
   display: flex;
   align-items: center;
+  margin-top: 5vh;
 }
 .footer > h2 {
   color: rgb(75, 2, 63);
