--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -53,7 +53,7 @@
   border-radius: 0 2rem 2rem 0;
   background-color: #f2f2f2;
   font-size: 1.5em;
-  cursor: pointer;
+  cursor: poResponseinter;
   margin-top: 35vh;
 }
 .search-bar > div {
@@ -64,8 +64,6 @@
   font-size: 5vw;
   background-color: rgba(255, 255, 255, 0.507);
   border-radius: 2rem;
-  padding-left: 1vw;
-  padding-right: 1vw;
 }
 .search-bar > p {
   position: absolute;
@@ -172,4 +170,51 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.Response {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.301);
+  height: 100%;
+  width: 100%;
+  z-index: 500000;
+}
+.responseBox {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  height: 90vh;
+  width: 90vw;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: #4747477e 1px solid;
+}
+.singleResponse {
+  width: 80%;
+  height: 10vh;
+  margin-top: 2%;
+  background-color: #f2f2f2;
+  border-radius: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  padding-left: 2%;
+  padding-right: 2%;
+  position: relative;
+}
+.Close {
+  position: absolute;
+  top: 2%;
+  right: 0.5%;
+  font-size: 3em;
+  cursor: pointer;
+  border-radius: 10rem;
+  width: 4vw;
 }
