--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -341,9 +341,8 @@
   .singleResponse {
     width: 80%;
     margin-top: 18%;
-    font-size: 1.5em;
-    padding-left: 2%;
-    padding-right: 2%;
+    font-size: 1.2em;
+    padding: 5%;
   }
   .Close {
     top: 3%;
